--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
-    	<link rel="canonical" href="http://cgp2-f.com/paid-subscribe/" />
+    	<link rel="canonical" href="http://cgp2-d.com/paid-subscribe/" />
 	<!-- basic -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
 	
     <meta name="author" content="VPN百科 订阅教程网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="http://cgp2-f.com/paid-subscribe/" />
+    <meta property="og:url" content="http://cgp2-d.com/paid-subscribe/" />
     <meta property="og:site_name" content="VPN百科 订阅教程网" />
     <meta property="og:title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - VPN百科 订阅教程网" />
     <meta property="og:image" content="/assets/website/img/clashnodesfree/favicon.ico" />
@@ -111,7 +111,7 @@
                     
                                                                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -164,7 +164,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -523,16 +523,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-129684.htm" title="突破网络边界：云科学上网的终极指南与实战技巧">突破网络边界：云科学上网的终极指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-129329.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
-                        <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
-                        <li class="py-2"><a href="/news/article-127620.htm" title="阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问">阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问</a></li>
-                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解">华为路由器科学上网终极指南：从原理到实战配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-133750.htm" title="揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南">揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南</a></li>
                         <li class="py-2"><a href="/news/article-127275.htm" title="新春限量版Clash：传统与时尚交融的绝佳之选">新春限量版Clash：传统与时尚交融的绝佳之选</a></li>
-                        <li class="py-2"><a href="/news/article-123988.htm" title="Clash汉化版13.3完全攻略：从零开始掌握科学上网利器">Clash汉化版13.3完全攻略：从零开始掌握科学上网利器</a></li>
-                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-127620.htm" title="阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问">阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问</a></li>
+                        <li class="py-2"><a href="/news/article-129329.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
+                        <li class="py-2"><a href="/news/article-127945.htm" title="伪造IP冲突：网络安全的隐形杀手与全面防御指南">伪造IP冲突：网络安全的隐形杀手与全面防御指南</a></li>
+                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-130732.htm" title="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南">深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南</a></li>
+                        <li class="py-2"><a href="/news/article-130026.htm" title="Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南">Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南</a></li>
+                        <li class="py-2"><a href="/news/article-124953.htm" title="Clash免费节点配置全攻略：从入门到精通的安全代理指南">Clash免费节点配置全攻略：从入门到精通的安全代理指南</a></li>
+                        <li class="py-2"><a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解">华为路由器科学上网终极指南：从原理到实战配置详解</a></li>
                     </ul>
     </div>
 </div>
@@ -544,7 +544,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
