--- a/about-us.htm
+++ b/about-us.htm
@@ -124,16 +124,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-131784.htm" title="解锁极速网络新时代：Clash独享节点全方位指南与深度评测">解锁极速网络新时代：Clash独享节点全方位指南与深度评测</a></li>
-                        <li class="py-2"><a href="/news/article-129329.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
-                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-131433.htm" title="Clash代理流量消耗全解析：原理、影响因素与高效使用指南">Clash代理流量消耗全解析：原理、影响因素与高效使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-130732.htm" title="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南">深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南</a></li>
-                        <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
+                        <li class="py-2"><a href="/news/article-126271.htm" title="解锁全球网络自由：AC1200GU路由器科学上网完全攻略">解锁全球网络自由：AC1200GU路由器科学上网完全攻略</a></li>
                         <li class="py-2"><a href="/news/article-130379.htm" title="突破网络枷锁：Clash翻墙全攻略与深度体验">突破网络枷锁：Clash翻墙全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-123665.htm" title="沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略">沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-127275.htm" title="新春限量版Clash：传统与时尚交融的绝佳之选">新春限量版Clash：传统与时尚交融的绝佳之选</a></li>
+                        <li class="py-2"><a href="/news/article-128299.htm" title="安卓用户必备：全方位科学上网工具指南与实战技巧">安卓用户必备：全方位科学上网工具指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-130026.htm" title="Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南">Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南</a></li>
+                        <li class="py-2"><a href="/news/article-127945.htm" title="伪造IP冲突：网络安全的隐形杀手与全面防御指南">伪造IP冲突：网络安全的隐形杀手与全面防御指南</a></li>
+                        <li class="py-2"><a href="/news/article-129329.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
+                        <li class="py-2"><a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解">华为路由器科学上网终极指南：从原理到实战配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-134758.htm" title="制霸魔法大陆：《Clash火龙》深度攻略与战术全解">制霸魔法大陆：《Clash火龙》深度攻略与战术全解</a></li>
+                        <li class="py-2"><a href="/news/article-125953.htm" title="突破网络边界：Pure科学上网工具全方位解析与实用指南">突破网络边界：Pure科学上网工具全方位解析与实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-133464.htm" title="解密SS科学上网与合购服务：经济实惠的网络自由之路">解密SS科学上网与合购服务：经济实惠的网络自由之路</a></li>
                     </ul>
     </div>
 </div>
@@ -145,7 +145,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
