--- a/client.htm
+++ b/client.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解">华为路由器科学上网终极指南：从原理到实战配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-123988.htm" title="Clash汉化版13.3完全攻略：从零开始掌握科学上网利器">Clash汉化版13.3完全攻略：从零开始掌握科学上网利器</a></li>
+                        <li class="py-2"><a href="/news/article-124953.htm" title="Clash免费节点配置全攻略：从入门到精通的安全代理指南">Clash免费节点配置全攻略：从入门到精通的安全代理指南</a></li>
+                        <li class="py-2"><a href="/news/article-123665.htm" title="沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略">沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略</a></li>
                         <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-130732.htm" title="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南">深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南</a></li>
                         <li class="py-2"><a href="/news/article-129329.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
-                        <li class="py-2"><a href="/news/article-125953.htm" title="突破网络边界：Pure科学上网工具全方位解析与实用指南">突破网络边界：Pure科学上网工具全方位解析与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-123350.htm" title="突破网络边界：全方位指南教你如何添加科学上网节点">突破网络边界：全方位指南教你如何添加科学上网节点</a></li>
+                        <li class="py-2"><a href="/news/article-134071.htm" title="安卓免流神器V2RayNG：从零开始掌握免流脚本配置全攻略">安卓免流神器V2RayNG：从零开始掌握免流脚本配置全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-127275.htm" title="新春限量版Clash：传统与时尚交融的绝佳之选">新春限量版Clash：传统与时尚交融的绝佳之选</a></li>
                         <li class="py-2"><a href="/news/article-126605.htm" title="解密V2Ray节点贴吧：从入门到精通的完整指南">解密V2Ray节点贴吧：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
-                        <li class="py-2"><a href="/news/article-130026.htm" title="Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南">Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南</a></li>
+                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
+                        <li class="py-2"><a href="/news/article-131784.htm" title="解锁极速网络新时代：Clash独享节点全方位指南与深度评测">解锁极速网络新时代：Clash独享节点全方位指南与深度评测</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
